--- a/resume7-1.html
+++ b/resume7-1.html
@@ -80,11 +80,34 @@
         </ul>
     </div>
     <footer>
-        <h2>Social Media Platforms</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/taylor-davids-741255132/">LinkedIn</a></li>
-            <li><a href="https://github.com/taylordavids1021">Github</a></li>
-        </ul>
+        <div class="social-media">
+            <h2>Social Media Platforms</h2>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/taylor-davids-741255132/">LinkedIn</a></li>
+                <li><a href="https://github.com/taylordavids1021">Github</a></li>
+            </ul>
+        </div>
+        <div class="contact-me">
+            <h2>Contact me</h2>
+            <form form action="https://formsubmit.co/taylordavids997@gmail.com" method="POST">
+                <div class="form-example">
+                    <label for="sex"><b>Lets chat:</b></label>
+                    <label class="zoom-call" for="zoom-call">Zoom call</label><input type="radio" id="zoom-call" name="zoom-call" required>
+                    <label class="meet-up" for="meet-up">Meet up</label><input type="radio" id="meet-up" name="meet-up" required>
+                </div>
+                <div class="email">
+                    <label for="email"><b>Email:</b></label>
+                    <input class="email" type="valid" name="email" id="email" required>
+                  </div>
+                <div class="topic">
+                    <label for="aboutme"><b>Topic:</b></label>
+                    <textarea id="story" name="story" rows="5" cols="33" optional>...</textarea >
+                </div>
+                <div class="form-example">
+                    <input class="button" type="send" value="Send!">
+                </div>
+            </form>
+        </div>
     </footer>
-    </body>
+</body>
 </html>
